--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -30,6 +30,12 @@
 
       <button class="btn equal" data-value="=">=</button>
     </div>
+        <div class="history">
+            <h3>History</h3>
+            <ul id="history-list"></ul>
+            <button id="clear-history" class="btn clear-history" disabled>Clear History</button>
+        </div>
+    </div>
   </div>
   <script src="./script.js"></script>
 </body>
