--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Calculator!</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./assets/icons/calc.ico" type="image/png">
 </head>
 <body>
   <div class="calculator">
