--- a/To-Do-List/index.html
+++ b/To-Do-List/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To-Do List</title>
     <link rel="stylesheet" href="./assets/style/style.css">
+    <link rel="icon" href="./assets/icons/todolist.ico" type="image/png">
 </head>
 <body>
     <div class="container">
