--- a/BooksApp/index.html
+++ b/BooksApp/index.html
@@ -12,11 +12,12 @@
         <h1>Aplikasi Buku</h1>
 
         <div class="form-container">
-            <input type="text" id="book-title" placeholder="Masukkan judul buku">
+            <input type="text" id="book-title" placeholder="Judul Buku">
+            <input type="url" id="book-cover" placeholder="URL Gambar Sampul">
             <button id="add-book">Tambah Buku</button>
         </div>
 
-        <ul id="book-list"></ul>
+        <div id="book-list" class="book-list"></div>
     </div>
 
     <script src="assets/js/script.js"></script>
