--- a/BooksApp/index.html
+++ b/BooksApp/index.html
@@ -13,6 +13,9 @@
 
         <div class="form-container">
             <input type="text" id="book-title" placeholder="Judul Buku">
+            <input type="text" id="book-author" placeholder="Penulis">
+            <input type="text" id="book-publisher" placeholder="Penerbit">
+            <input type="number" id="book-year" placeholder="Tahun Terbit">
             <input type="url" id="book-cover" placeholder="URL Gambar Sampul">
             <button id="add-book">Tambah Buku</button>
         </div>
