--- a/BooksApp/index.html
+++ b/BooksApp/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+    <div class="loading-container" id="loading-container">
+        <div class="loading"></div>
+    </div>    
+
     <div class="container">
         <h1>Aplikasi Buku</h1>
 
