--- a/ProductFilterApp/index.html
+++ b/ProductFilterApp/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Filter Produk dengan CRUD</title>
+  <title>Produk</title>
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -12,36 +12,18 @@
   </header>
 
   <section class="filter-section">
-    <input type="text" id="searchInput" placeholder="Cari produk berdasarkan nama...">
-    <select id="categoryFilter">
-      <option value="all">Semua Kategori</option>
-      <option value="elektronik">Elektronik</option>
-      <option value="fashion">Fashion</option>
-      <option value="makanan">Makanan</option>
-    </select>
-    <button id="addProductButton">Tambah Produk</button>
+    <h2>Tambah Produk</h2>
+    <form id="productForm" onsubmit="event.preventDefault(); saveProduct();">
+      <input type="text" id="productName" placeholder="Nama Produk" required />
+      <input type="text" id="productCategory" placeholder="Kategori Produk" required />
+      <input type="number" id="productStock" placeholder="Stok Produk" required />
+      <button type="submit">Tambah Produk</button>
+    </form>
   </section>
 
-  <section class="product-list" id="productList">
+  <section id="productList" class="product-list">
     <!-- Produk akan dirender di sini -->
   </section>
-
-  <!-- Modal untuk Tambah/Edit Produk -->
-  <div id="productModal" class="modal hidden">
-    <div class="modal-content">
-      <h2 id="modalTitle">Tambah Produk</h2>
-      <label for="productName">Nama Produk:</label>
-      <input type="text" id="productName" placeholder="Masukkan nama produk...">
-      <label for="productCategory">Kategori:</label>
-      <select id="productCategory">
-        <option value="elektronik">Elektronik</option>
-        <option value="fashion">Fashion</option>
-        <option value="makanan">Makanan</option>
-      </select>
-      <button id="saveProductButton">Simpan</button>
-      <button id="cancelButton">Batal</button>
-    </div>
-  </div>
 
   <script src="./assets/js/script.js"></script>
 </body>
